bug 406875: TypeCastUtility: casting a BigDecimal to Boolean is not done properly
https://bugs.eclipse.org/bugs/show_bug.cgi?id=406875

(cherry picked from commit 5f35c9c88b695196fbcce42f61d97693b8856e6d)

Change-Id: I89743a0c386cb4046bb3ebe53f7ecc39b9ba8285